crates/keron-lang/tests/corpus/errors/check/fn_unknown_named_arg.keron
fn f(a: Int): Int {
  a
}

val x: Int = f(b = 1)
